tests/base/invalid/Assign_CompileFail_5.whiley


int f(bool x):
     return x
